# speech_based_teleop_commander

./: .gitignore  CMakeLists.txt  README (speech).md  README.md
ros_cagg_msgs/: package.xml
ros_cagg_msgs/msg/: cagg_tags.msg
ros_cagg_teleop/: CMakeLists.txt  build.gradle  package.xml  settings.gradle
ros_cagg_teleop/launch/: ros_cagg_interface.launch
ros_cagg_teleop/ros_java_cagg_teleop_interface/: build.gradle
ros_cagg_teleop/ros_java_cagg_teleop_interface/res/: directive_grammar.cagg  directive_grammar.ser  go_grammar.cagg  go_grammar.ser  log4j_guiConf.xml
ros_cagg_teleop/ros_java_cagg_teleop_interface/src/main/java/it/emarolab/ros_cagg_node/: CaggInterface.java  CaggNode.java
ros_cagg_teleop/ros_java_cagg_teleop_interface/src/main/java/it/emarolab/ros_cagg_teleop/: CaggInterface.java  CaggNode.java
ros_verbal_interaction_node/: CMakeLists.txt  package.xml
ros_verbal_interaction_node/java-script/: speech_web_interface.html
ros_verbal_interaction_node/launch/: speech_back_example.launch  speech_interface.launch
ros_verbal_interaction_node/msg/: Speech2text.msg
ros_verbal_interaction_node/src/: speech_cagg_manager.cpp  speech_example.cpp  speech_teleop_adapter.cpp
speech_interaction/: CMakeLists.txt  package.xml
speech_interaction/java-script/: speech_web_interface.html
speech_interaction/launch/: speech_adapter.launch  web_interface_visualiser.sh
speech_interaction/msg/: Text2speech.msg
speech_interaction/src/: speech_teleop_adapter.cpp
